# DisplayCluster

./: .gitexternals  .gitignore  CMakeLists.txt  README  README.md
CMake/: CPackConfig.cmake  DisplayCluster.cmake  FindPackages.cmake  FindRequired.cmake  depends.txt
apps/DesktopStreamer/: CMakeLists.txt
apps/DesktopStreamer/src/: MainWindow.cpp  MainWindow.h
apps/DisplayCluster/: CMakeLists.txt  displaycluster.py  main.cpp  startdisplaycluster
apps/LocalStreamer/src/: Application.cpp
apps/SimpleStreamer/src/: main.cpp
cmake/modules/: GitExternal.cmake
doc/: Documentation.md  Doxyfile  RelNotes.md
examples/: displaycluster.py  startdisplaycluster
src/: Configuration.h  Content.cpp  DisplayGroupManager.cpp  Dock.cpp  Event.h  MainWindow.cpp  MainWindow.h  MessageHeader.cpp  MessageHeader.h  ParallelPixelStream.cpp  ParallelPixelStream.h  ParallelPixelStreamSegmentParameters.h  PixelStream.cpp  PixelStream.h  PixelStreamSegment.h  Texture.cpp  Texture.h  TextureContent.cpp  ZoomInteractionDelegate.h  main.cpp
src/core/: BackgroundWidget.cpp  CMakeLists.txt  Content.cpp  Content.h  ContentFactory.cpp  ContentFactory.h  ContentInteractionDelegate.cpp  ContentInteractionDelegate.h  ContentLoader.cpp  ContentLoader.h  ContentWindowGraphicsItem.cpp  ContentWindowGraphicsItem.h  ContentWindowInterface.cpp  ContentWindowInterface.h  ContentWindowManager.cpp  ContentWindowManager.h  DisplayGroupGraphicsScene.cpp  DisplayGroupGraphicsView.cpp  DisplayGroupGraphicsViewProxy.cpp  DisplayGroupInterface.cpp  DisplayGroupInterface.h  DisplayGroupListWidgetProxy.cpp  DisplayGroupManager.cpp  DisplayGroupManager.h  DynamicTexture.cpp  DynamicTexture.h  DynamicTextureContent.cpp  DynamicTextureContent.h  Factory.hpp  FileCommandHandler.cpp  FileCommandHandler.h  FpsCounter.cpp  FpsCounter.h  GLWindow.cpp  GLWindow.h  MPIChannel.cpp  MPIChannel.h  MainWindow.cpp  MainWindow.h  Marker.cpp  (+48 more)
src/core/configuration/: Configuration.cpp  Configuration.h  MasterConfiguration.cpp  MasterConfiguration.h
src/core/gestures/: DoubleTapGesture.h  DoubleTapGestureRecognizer.cpp  DoubleTapGestureRecognizer.h  PanGesture.cpp  PanGestureRecognizer.cpp  PinchGesture.cpp  PinchGestureRecognizer.cpp
src/core/localstreamer/: DockPixelStreamer.cpp  DockPixelStreamer.h  Pictureflow.cpp  Pictureflow.h  PixelStreamerLauncher.cpp  PixelStreamerLauncher.h  WebkitHtmlSelectReplacer.cpp  WebkitHtmlSelectReplacer.h  WebkitPixelStreamer.cpp  WebkitPixelStreamer.h
src/core/resources/: core.qrc
src/core/thumbnail/: MovieThumbnailGenerator.cpp
src/core/ws/: TextInputDispatcher.cpp  TextInputDispatcher.h  TextInputHandler.cpp  WebServiceServer.cpp  WebServiceServer.h
src/dcWebservice/: CMakeLists.txt  DefaultHandler.cpp  FastCGIWrapper.cpp  Mapper.cpp  RequestBuilder.cpp  Response.cpp
src/dcstream/: CMakeLists.txt  DcSocket.cpp  ImageSegmenter.cpp  ImageSegmenter.h  ImageWrapper.cpp  Stream.cpp  StreamPrivate.cpp  StreamPrivate.h
src/lib/: DcSocket.cpp  dcStream.cpp  dcStream.h
tests/: CMakeLists.txt  MinimalGlobalQtApp.h  MinimalGlobalQtAppMPI.h  configuration.xml
tests/core/: CommandLineOptionsTests.cpp  ContentWindowManagerTests.cpp  PixelStreamWindowManagerTests.cpp  StateSerializationTests.cpp  TextInputHandlerTests.cpp  WebkitHtmlSelectReplacementTests.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/common/: PixelStreamSegmentDecoderTests.cpp
tests/cpp/core/: CommandLineOptionsTests.cpp  ConfigurationTests.cpp  DoubleTapGestureTests.cpp  DummyContent.h  PixelStreamWindowManagerTests.cpp  TextInputHandlerTests.cpp  WebkitHtmlSelectReplacementTests.cpp
tests/cpp/dcWebservice/: ServerTests.cpp
tests/cpp/dcstream/: ImageSegmenterTests.cpp  SocketTests.cpp
tests/dcWebservice/: HandlerTests.cpp  ServerTests.cpp
tests/dcstream/: MockNetworkListener.cpp  MockNetworkListener.h
tests/mock/: CMakeLists.txt  GlobalQtApp.h  MinimalGlobalQtAppMPI.h  MockTextInputDispatcher.cpp  MockTouchEvents.h
tests/perf/: CMakeLists.txt  dcStreamTests.cpp
tests/resources/: CMakeLists.txt
webservice/etc/: nginx.conf
webservice/www/: textinput.html
webservice/www/mobile/: textinput.html
webservice/www/scripts/: dcapi.js
